# cookiecutter-rpkg

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}pkg/: LICENSE  pyproject.toml
{{cookiecutter.project_slug}}pkg/src/{{cookiecutter.project_slug}}pkg/: cli.py
{{cookiecutter.project_slug}}pkg/test/unit/: test_cli.py
